[package]
name = "ethstaking_tracker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0.147", features = ["derive"]}
serde_json = "1.0.87"
toml = "0.5.9"
reqwest = {version="0.11.12", features=["json"]}
tokio = { version = "1.21.2", features = ["full"] } # for our async runtime
chrono = "0.4.22"
csv = "1.1.6"